# ACE

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile  openapi.yaml  pyproject.toml
.github/workflows/: security-audit.yml
assets/: sample_directives.json
bench/: bench_core.py
configs/: axiom_hive_config.yaml  directive.yaml
docs/: ace_platform_overview.md  examples.md  inverted_lagrangian_proof.tex  manifesto_phase_3.md  roadmap.md  wasm.md
docs/axioms/: finance.md
installer/: build.ps1  build.sh
policy/: safety_config.json  safety_policy.py
public/: index.html  landing.html  main.js  style.css
release/: sbom.json
scripts/: install_mac.sh  install_win.ps1
src/: __init__.py  ace.py  api.rs  audit.rs  broker.py  config.py  crown_sigma_logic.py  identity_barrier.py  ledger.py  lib.rs  main.rs  nlp.py  performance.py  policy.rs  safety.py  triage.py  utils.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/dag/: dag.rs  libp2p_integration.rs  merkletree.rs  mod.rs
src/model/: attention.rs  engine.rs  hybrid_block.rs  meta_tokens.rs  mod.rs  ssm.rs
src/payment/: bitcoin.rs  mod.rs
src/verification/: axiom_checker.rs  mod.rs  zkml.rs
telemetry/: otel_config.yaml
tests/: api_contract.rs  audit.rs  flows.rs  model_determinism.rs  payment.rs  policy.rs  test_broker.py  test_nlp.py  test_performance.py  test_safety.py  test_triage.py  verification_rules.rs
