[package]
name = "axiomhive"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Hybrid SSM + attention AI runtime with verified mode, DAG compute, and Lightning billing."

[features]
default = ["cli"]
cli = []
wasm = []
cuda = []
tauri = []

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1"
rand = "0.8"
sha2 = "0.10"
blake3 = "1"
ed25519-dalek = "2"
hex = "0.4"
libp2p = { version = "0.54", default-features = false, features = ["tcp", "yamux", "gossipsub", "identify"] }
moka = "0.12"
ring = "0.17"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
futures = "0.3"
rayon = "1.8"
tokio-stream = "0.1"
sha3 = "0.10"
bs58 = "0.5"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
