[tool.poetry]
name = "ace-chatbot"
version = "1.0.0"
description = "Ace Apex Intelligence"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
osqp = "^0.6"
pyyaml = "^6.0"
cryptography = "^42.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
black = "^23.7"